fix: minor style changes for alignment and sizing

--- a/components/saas-pricing-page/index.css
+++ b/components/saas-pricing-page/index.css
@@ -6,10 +6,11 @@
     padding: 20px;
     border: 1px solid #e0e0e0;
     border-radius: 5px;
-    margin: 6rem;
     cursor: pointer;
     transition: all 0.3s;
-    }
+    width: fit-content;
+    margin: auto;
+}
 
 .options-element-box {
     text-align: center;
@@ -18,6 +19,9 @@
     flex-direction: column;
     height: 100%;
     gap:1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
 }
 
 .br {
@@ -29,26 +33,8 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
-    width: 200px;
 }
 
-.toggle-option {
-    flex: 1;
-    text-align: center;
-    padding: 10px;
-    cursor: pointer;
-    background-color: #f0f0f0;
-    transition: all 0.3s ease;
-}
-
-.toggle-option.selected {
-    background-color: #f38c43; /* Orange color */
-    color: white;
-}
-
-.toggle-option:not(.selected):hover {
-    background-color: #e0e0e0;
-}
 
 .input-field {
     text-align: center;
@@ -65,42 +51,6 @@
     margin-top: 5%;
     padding: 20px;
 
-}
-
-.options-box {
-    display: grid;
-    align-items: center;
-    justify-content: space-evenly;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 20px;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-    margin: 10px;
-    cursor: pointer;
-    transition: all 0.3s;
-}
-
-.options-element-box {
-    text-align: center;
-}
-
-.br {
-    border-right: 1px solid #e0e0e0;
-}
-
-.input-field {
-    width: 80%;
-    padding: 5px;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-}
-
-.toggle-switch {
-    display: flex;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 200px;
 }
 
 .toggle-option {
@@ -150,10 +100,6 @@
 .pricing-table th:last-child,
 .pricing-table td:last-child {
     border-right: none;
-}
-
-.pricing-table tbody tr:nth-child(even) {
-    background-color: #f7f7f7;
 }
 
 .best-value {
